<resources>
    <string name="app_name">DSS</string>
    <string name="app_nameversion">DSS V 1.0</string>
    <string name="app_login">DSS LOGIN</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Maintenance</string>
    <string name="menu_event">Event</string>
    <string name="menu_visitor">Visitor</string>
    <string name="menu_noti">Notification</string>
    <string name="menu_complaint">Complaint</string>
    <string name="menu_acomplaint">Send Complaint</string>
    <string name="menu_wing">Wing</string>
    <string name="menu_staff">Staff</string>
    <string name="menu_income">Income</string>
    <string name="menu_expense">Expense</string>

    <string name="menu_logout">Logout</string>

    <string name="conne_msg1">No Network Connection!!!</string>
    <string name="no_item_found">No Item Found</string>

</resources>