<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.app.dss.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.app.dss.ui.gallery.EventFragment"
        android:label="@string/menu_event"
        tools:layout="@layout/fragment_event" />

    <fragment
        android:id="@+id/nav_visitor"
        android:name="com.app.dss.ui.slideshow.VisitorFragment"
        android:label="@string/menu_visitor"
        tools:layout="@layout/fragment_visitor" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.app.dss.ui.gallery.NotificationFragment"
        android:label="@string/menu_noti"
        tools:layout="@layout/fragment_notification" />
    <fragment
        android:id="@+id/nav_complaint"
        android:name="com.app.dss.ui.gallery.ComplainFragment"
        android:label="@string/menu_complaint"
        tools:layout="@layout/fragment_complaint" />
    <fragment
        android:id="@+id/nav_addcomplaint"
        android:name="com.app.dss.ui.gallery.AddComplainFragment"
        android:label="@string/menu_acomplaint"
        tools:layout="@layout/fragment_addcomplaint" />
    <fragment
        android:id="@+id/nav_wing"
        android:name="com.app.dss.ui.gallery.WingFragment"
        android:label="@string/menu_wing"
        tools:layout="@layout/fragment_wing" />
    <fragment
        android:id="@+id/nav_staff"
        android:name="com.app.dss.ui.gallery.StaffFragment"
        android:label="@string/menu_staff"
        tools:layout="@layout/fragment_staff" />
    <fragment
        android:id="@+id/nav_income"
        android:name="com.app.dss.ui.gallery.IncomeFragment"
        android:label="@string/menu_income"
        tools:layout="@layout/fragment_income" />
    <fragment
        android:id="@+id/nav_expense"
        android:name="com.app.dss.ui.gallery.ExpenseFragment"
        android:label="@string/menu_expense"
        tools:layout="@layout/fragment_income" />
</navigation>